--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -30,7 +30,7 @@
                             style="border-radius: 10px; border: none; height: 30px ; width:75px; background-color: #f68383">
                         </form>
                     </li>
-                    <li><a th:href="@{/home}" >Homea</a></li>
+                    <li><a th:href="@{/home}" >Home</a></li>
                     <li><a>Products</a></li>
                     <li><a th:href="@{/order/history}">Order History</a></li>
                     <li><a>Contact</a></li>
@@ -216,7 +216,7 @@
                     <i class="fa fa-star"></i>
                 </div>
                 <img th:src="@{/img/user-1.png}" style="margin-left: 125px;"><br>
-                <h3>Hung Tran </h3>
+                <h3>Hùng Trần</h3>
             </div>
             <div class="col-3">
                 <i class="fa fa-quote-left"></i>
@@ -229,7 +229,7 @@
                     <i class="fa fa-star"></i>
                 </div>
                 <img th:src="@{/img/user-2.png}" style="margin-left: 125px;"><br>
-                <h3>Le Hai Dang</h3>
+                <h3>Lê Hải Đăng</h3>
             </div>
             <div class="col-3">
                 <i class="fa fa-quote-left"></i>
@@ -242,7 +242,7 @@
                     <i class="fa fa-star"></i>
                 </div>
                 <img th:src="@{/img/user-3.png}" style="margin-left: 125px;"><br>
-                <h3>Cuong Minh</h3>
+                <h3>Phạm Thế Hùng</h3>
             </div>
             <div class="col-3">
                 <i class="fa fa-quote-left"></i>
@@ -255,7 +255,7 @@
                     <i class="fa fa-star"></i>
                 </div>
                 <img th:src="@{/img/user-4.png}" style="margin-left: 125px;"><br>
-                <h3>Bui Dung</h3>
+                <h3>Đoàn Linh</h3>
             </div>
             <div class="col-3">
                 <i class="fa fa-quote-left"></i>
@@ -268,7 +268,7 @@
                     <i class="fa fa-star"></i>
                 </div>
                 <img th:src="@{/img/user-5.png}" style="margin-left: 125px;"><br>
-                <h3>Vuong Doan</h3>
+                <h3>Vương Đoàn</h3>
             </div>
             <div class="col-3">
                 <i class="fa fa-quote-left"></i>
@@ -281,7 +281,7 @@
                     <i class="fa fa-star"></i>
                 </div>
                 <img th:src="@{/img/user-6.png}" style="margin-left: 125px;"><br>
-                <h3>Chu Manh</h3>
+                <h3>Phan Thùy Linh MB bank</h3>
             </div>
         </div>
     </div>
