--- a/src/main/resources/templates/product-detail.html
+++ b/src/main/resources/templates/product-detail.html
@@ -108,11 +108,20 @@
 </div>
 
 <style>
+    .detail-product{
+        max-width: 1120px;
+        width: 100%;
+        margin: 0 auto;
+        border-radius: 8px;
+    }
+
     .reviews {
-        margin-top: 20px;
         padding: 20px;
+        margin-top:20px ;
         border: 1px solid #ccc;
         border-radius: 5px;
+        max-width: 1120px;
+        margin-inline: auto;
     }
 
     .reviews h2 {
@@ -145,15 +154,33 @@
     #reviews-pagination button:hover {
         background-color: #ddd;
     }
+    .rate-icon{
+        width: 20px;
+        height: 20px;
+    }
+    .line{
+        border: 1px solid lightgray;
+        width: 100%;
+        height: 1px;
+        margin-bottom: 20px;
+    }
+    .review-name{
+        font-weight: bold;
+    }
 </style>
 <div class="reviews">
     <h2>Reviews</h2>
     <div id="review-contents">
         <th:block th:each="rv: ${reviews}">
-            <p>Name: <span th:text="${rv.getCustomer().getFirstName() + ' ' + rv.getCustomer().getLastName()}"></span></p>
-            <p>Rating: <span th:text="${rv.getRating()}"></span></p>
-            <p>Content: <span th:text="${rv.getContent()}"></span></p>
-            <br><br>
+            <p class="review-name"><span th:text="${rv.getCustomer().getFirstName() + ' ' + rv.getCustomer().getLastName()}"></span></p>
+            <th:block th:each="i : ${#numbers.sequence(1, rv.getRating())}">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="yellow" viewBox="0 0 24 24" stroke-width="1.5" stroke="gray" class="rate-icon">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M11.48 3.499a.562.562 0 0 1 1.04 0l2.125 5.111a.563.563 0 0 0 .475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 0 0-.182.557l1.285 5.385a.562.562 0 0 1-.84.61l-4.725-2.885a.562.562 0 0 0-.586 0L6.982 20.54a.562.562 0 0 1-.84-.61l1.285-5.386a.562.562 0 0 0-.182-.557l-4.204-3.602a.562.562 0 0 1 .321-.988l5.518-.442a.563.563 0 0 0 .475-.345L11.48 3.5Z" />
+                </svg>
+
+            </th:block>
+            <p><span th:text="${rv.getContent()}"></span></p>
+            <div class="line"></div>
         </th:block>
     </div>
     <div id="reviews-pagination">
